# paca

./: .envrc  .gitignore  Brewfile  Cargo.toml  README.md
.config/: medic.toml
paca-cli/: Cargo.toml  README.md
paca-cli/src/: lib.rs  main.rs
paca-cli/src/cli/: mod.rs
paca-cli/src/progress/: mod.rs
paca-core/: Cargo.toml  README.md
paca-core/src/: error.rs  lib.rs
paca-core/src/cache/: mod.rs
paca-core/src/cache/clean/: mod.rs
paca-core/src/cache/remove/: mod.rs
paca-core/src/download/: endpoint.rs  manifest.rs  mod.rs  model_ref.rs
paca-core/src/error/: mod.rs
paca-core/src/model/: mod.rs
paca-core/src/progress/: mod.rs
paca-core/src/registry/: endpoint.rs  manifest.rs  mod.rs
paca-core/src/sysinfo/: mod.rs
paca-core/src/test_support/: mod.rs
