[package]
name = "paca-cli"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "paca"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true

[features]
strict = [] # Treat warnings as a build error.

