[package]
name = "paca"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dirs.workspace = true
libc.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
temp-env.workspace = true
tempfile.workspace = true
wiremock.workspace = true

[features]
default = ["rustls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls = ["reqwest/rustls"]
rustls-no-provider = ["reqwest/rustls-no-provider"]
strict = [] # Treat warnings as a build error.

